--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.tooltip {
+    position: absolute;
+    text-align: center;
+    padding: 6px;
+    font-size: 12px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 4px;
+    pointer-events: none;
+    visibility: hidden; 
+  }
