--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+*{
+    background: hsl(270, 50%, 20%);
+}
+
 .tooltip {
     position: absolute;
     text-align: center;
