--- a/app/globals.css
+++ b/app/globals.css
@@ -2,28 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-
-*{
-    background: hsl(270, 50%, 20%);
+/* Set background color for the body, instead of using universal selector */
+body {
+  background: hsl(270, 50%, 20%);
 }
 
+/* Tooltip styling */
 .tooltip {
-    position: absolute;
-    text-align: center;
-    padding: 6px;
-    font-size: 12px;
-    background: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    border-radius: 4px;
-    pointer-events: none;
-    visibility: hidden; 
-  }
+  position: absolute;
+  text-align: center;
+  padding: 6px;
+  font-size: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 4px;
+  pointer-events: none;
+  visibility: hidden; 
+}
 
-  path {
-    transition: all 0.5s ease;
-  }
-  
-  path:hover {
-    fill:  hsl(270, 50%, 60%); /* Example hover effect */
-    stroke-width: 2px;
-  }
+/* Path transition */
+path {
+  transition: all 0.5s ease;
+}
+
+/* Path hover effect */
+path:hover {
+  fill: hsl(270, 50%, 60%); /* Example hover effect */
+  stroke-width: 2px;
+}
